[PREVIEW] Fix scrolling flickering when typing text in a Textile file containing images.

--- a/media/textile.css
+++ b/media/textile.css
@@ -155,3 +155,9 @@ body.showEditorSelection blockquote > p.code-active-line:before {
 .vscode-high-contrast.showEditorSelection tr.code-line .code-line:hover td:first-child:before {
 	border-left: none;
 }
+
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
